margins fixed on mobile view

--- a/h4x2-front/css/style.css
+++ b/h4x2-front/css/style.css
@@ -422,7 +422,7 @@
       position: absolute;
       top: 50%;
       left: 70%;
-      width: relative;
+      width: 400px;
       height: relative;
       opacity: 0;
     
